<resources>
    <string name="app_name">Fighting COVI-19</string>
    <string name="Pref_name">My Pref</string>
    <string name="pref_key">My Key</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="wash_your_hand_nevery_few_minutes">Wash Your Hand\nEvery few Minutes</string>
    <string name="cover_your_mouth_nwhen_you_cought">Cover Your Mouth\nWhen You Cought</string>
    <string name="always_wear_the_mask_nmaintain_social_distancing">Always Wear The Mask\nMaintain Social Distancing</string>
    <string name="avoid_handshak_nmeeting_people_in_group">Avoid Handshak\nMeeting People in Group</string>
    <string name="ask_your_family_dr_nfor_advice">Ask Your Family Dr.\nFor Advice</string>
    <string name="welcome_as_a_guest">Welcome, as a Guest</string>
    <string name="login">Login?</string>
    <string name="sign_up_for_new_account">Sign up for new account</string>
    <string name="password">Password</string>
    <string name="login_login">Login</string>
    <string name="stay_home_stay_safe">Stay Home, Stay Safe</string>
    <string name="welcome">Welcome!</string>
    <string name="register_here">Register Here</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_password">Enter Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="date_of_birth">Date Of Birth</string>
    <string name="enter_full_name_first_middle_last"><![CDATA[Enter Full Name--> First Middle Last]]></string>
    <string name="enter_e_mail_address">Enter E-Mail Address</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="age">Age</string>
    <string name="enter_address">Enter Address</string>
    <string name="enter_pincode">Enter Pincode</string>
    <string name="enter_mobile_no">Enter Mobile No.</string>
    <string name="enter_optional_number">Enter Optional Number</string>
    <string name="enter_password1">Enter Password</string>
    <string name="confirm_password1">Confirm Password</string>
    <string name="register">Register</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="fever">Fever</string>
    <string name="fever_temperature_in_farhrenhiet">Fever Temperature in Farhrenhiet</string>
    <string name="_96f_98f">96F` - 98F`</string>
    <string name="_98_6f_102f">98.6F` - 102F`</string>
    <string name="_102f"><![CDATA[>102F`]]></string>
    <string name="none_of_these">None of These</string>
    <string name="how_many_days_to_come">How many days to come?</string>
    <string name="no_of_days">No. of Days</string>
    <string name="cough">Cough</string>
    <string name="dry_cough">Dry Cough</string>
    <string name="gel_cough">Gel Cough</string>
    <string name="other_symptoms">Other Symptoms</string>
    <string name="low_smell">Low Smell</string>
    <string name="sore_throat">Sore Throat</string>
    <string name="feeling_not_well">Feeling Not Well</string>
    <string name="change_in_appetite">Change In Appetite</string>
    <string name="difficulty_in_breathing">Difficulty In Breathing</string>
    <string name="persistant_pain">Persistant Pain</string>
    <string name="drowsiness">Drowsiness</string>
    <string name="in_history_do_you_have_any_of_conditions_mentioned_below">In History, Do you have any of conditions mentioned Below?</string>
    <string name="cholesterol">Cholesterol</string>
    <string name="high_blood_pressure">High Blood Pressure</string>
    <string name="heart_disease">Heart Disease</string>
    <string name="kidney_disease">Kidney Disease</string>
    <string name="lung_disease">Lung Disease</string>
    <string name="any_cancers">Any Cancers</string>
    <string name="any_travel_history_in_past_15days">Any Travel History in Past 15days?</string>
    <string name="any_contact_with_affected_person">Any Contact with Affected Person?</string>
    <string name="home">Home</string>
    <string name="enter_dr_name">Enter Dr. Name</string>
    <string name="enter_dr_mobile_no">Enter Dr. Mobile No.</string>
    <string name="logout">Logout</string>
    <string name="username">Username</string>
    <string name="email_address">Email Address</string>
    <string name="mobile_no">Mobile No.</string>
    <string name="optinal_mobile_no">Optinal Mobile No.</string>
    <string name="gender">Gender</string>
    <string name="loading">loading...</string>
    <string name="address">Address</string>
    <string name="status">Real Status of Corona Cases</string>
</resources>
