<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserProfile">

    <LinearLayout
        android:id="@+id/progressLayout"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_marginTop="@dimen/_5sdp"
            android:textSize="@dimen/_20ssp"
            android:textAlignment="center"
            android:text="@string/loading"
            android:textColor="@color/colorPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:visibility="gone"
        android:id="@+id/mainLayout"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:background="@color/colorPrimary"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_120sdp">

            <TextView
                android:id="@+id/txtUsername"
                android:textStyle="bold"
                android:textSize="@dimen/_17ssp"
                android:fontFamily="@font/martel_bold"
                android:textColor="@android:color/white"
                android:text="@string/username"
                android:layout_centerInParent="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </RelativeLayout>

        <LinearLayout
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:layout_marginLeft="@dimen/_10sdp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_margin="@dimen/_5sdp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/_13ssp"
                    android:text="@string/email_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/txtUserEmailAdd"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/_13ssp"
                    android:text="@string/email_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <View
                    android:background="@color/colorPrimary"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_1sdp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_margin="@dimen/_5sdp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/_13ssp"
                    android:text="@string/mobile_no"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/txtUserMobileNo"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/_13ssp"
                    android:text="@string/mobile_no"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <View
                    android:background="@color/colorPrimary"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_1sdp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_margin="@dimen/_5sdp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/_13ssp"
                    android:text="@string/optinal_mobile_no"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/txtUserOptinalMobileNum"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/_13ssp"
                    android:text="@string/optinal_mobile_no"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <View
                    android:background="@color/colorPrimary"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_1sdp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_margin="@dimen/_5sdp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/_13ssp"
                    android:text="@string/age"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/txtUserAge"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/_13ssp"
                    android:text="@string/age"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <View
                    android:background="@color/colorPrimary"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_1sdp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_margin="@dimen/_5sdp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/_13ssp"
                    android:text="@string/gender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/txtUserGender"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/_13ssp"
                    android:text="@string/gender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <View
                    android:background="@color/colorPrimary"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_1sdp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_margin="@dimen/_5sdp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/_13ssp"
                    android:text="@string/address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/txtUserAddress"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/_13ssp"
                    android:text="@string/gender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <View
                    android:background="@color/colorPrimary"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_1sdp"/>
            </LinearLayout>


        </LinearLayout>
    </LinearLayout>

    <com.ismaeldivita.chipnavigation.ChipNavigationBar
        android:id="@+id/navigator"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="#fff"
        android:elevation="16dp"
        android:gravity="center"
        app:cnb_menuResource="@menu/buttom_navigator"
        android:layout_alignParentBottom="true"
        />
</RelativeLayout>