<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">


    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/docto_advice" />

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.7"
        android:background="#dd4f39" />

    <LinearLayout
        android:layout_width="330dp"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical"
        android:padding="15dp"
        app:layout_constraintEnd_toEndOf="@+id/imageView5"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints">

        <View
            android:layout_width="0dp"
            android:layout_height="50dp" />

        <TextView
            android:id="@+id/welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:text="@string/welcome"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Display2"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            app:fontFamily="@font/martel_light" />

        <TextView
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:text="@string/stay_home_stay_safe"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            android:textColor="@android:color/white"
            app:fontFamily="@font/martel_extralight" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:text="@string/login_login"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_20ssp"
            android:textStyle="bold"
            app:fontFamily="@font/martel_bold" />

        <View
            android:layout_width="90dp"
            android:layout_height="3dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:background="@android:color/white" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_e_mail_address"
            android:theme="@style/EditText.White.Hint">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtLoginUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:includeFontPadding="false"
                android:inputType="text"
                android:maxLength="50"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@android:color/white"
                android:theme="@style/EditText.White" />
        </com.google.android.material.textfield.TextInputLayout>


        <View
            android:layout_width="0dp"
            android:layout_height="20dp" />
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:theme="@style/EditText.White.Hint"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@android:color/white">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtLoginPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:maxLength="50"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@android:color/white"
                android:theme="@style/EditText.White" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/error_msg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorTextAppearance="@style/text_Apearence"
            app:hintTextAppearance="@style/text_Apearence" />
        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="0.2"/>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ProgressBar
                android:id="@+id/pbLoginProgress"
                style="?android:attr/progressBarStyle"
                android:layout_width="186dp"
                android:layout_height="63dp"
                android:indeterminate="true"
                android:indeterminateTint="@android:color/white"
                android:max="100"
                android:layout_marginStart="@dimen/_40sdp"
                android:minWidth="@dimen/_180sdp"
                android:minHeight="@dimen/_30sdp"
                android:progress="0"
                />
            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/floatButtonLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:textStyle="bold"
                android:tint="#dd4f39"
                app:backgroundTint="@android:color/white"
                app:fabCustomSize="@dimen/_50sdp"
                app:maxImageSize="@dimen/_25sdp"
                app:rippleColor="#dd4f39"
                app:srcCompat="@drawable/ic_arrow"
                tools:ignore="VectorDrawableCompat"
                android:layout_marginStart="@dimen/_90sdp"
                android:focusable="true" />
        </RelativeLayout>
        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="0.2"/>
        <TextView
            android:textAlignment="center"
            android:id="@+id/txtGotoSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/sign_up_for_new_account"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_15ssp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginBottom="0dp"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>